--- a/winery-spring-mvc/src/main/resources/Texts_sk.properties
+++ b/winery-spring-mvc/src/main/resources/Texts_sk.properties
@@ -2,10 +2,10 @@
 #navigation menu
 navigation.project=PA165 Winery Management System
 navigation.admin=Spr\u00E1va
-navigation.admin.orders=V\u00EDna
-navigation.admin.products=Feedbacks
-navigation.admin.customers=Harvests
-navigation.admin.categories=Grapes
+navigation.admin.wines=V\u00EDna
+navigation.admin.feedbacks=Feedbacks
+navigation.admin.harvests=Harvests
+navigation.admin.grapes=Grapes
 navigation.home=Domov
 navigation.docs=Dokument\u00E1cia
 navigation.about=About
